--- a/index.html
+++ b/index.html
@@ -1,3 +1,2 @@
-<b>hello world</b>
-<br>
-wankgen.com is a website that generates ai porn. 
+<h1 style="text-align:center;>WANKGEN.COM</h1>
+<p>This website is dedicated to providing you with the best possible porn, by artificially generating it. We use the latest in AI technology to create realistic and believable porn scenes, so you can enjoy yourself without feeling guilty. Whether you're looking for something to get you off, or just want to watch some hot scenes without any real-life consequences, this is the site for you.</p>
