--- a/index.html
+++ b/index.html
@@ -10,3 +10,4 @@
            <li>AI generated porn can be created without involving any real people, meaning that there is no risk of performers being exploited or mistreated</li>
            <li>AI generated porn can be created to be more realistic and lifelike than traditional porn, making it a more enjoyable experience for viewers</li>
 </ul>
+<img style="text-align: center" src="/img.png">
