--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
    font-size: 19px;
 }
 </style>
+<img style="width: 150px; display: block; margin: 0 auto; display: block; -webkit-border-radius: 50%;" src="/img.png">
 <p>This website is dedicated to providing you with the best possible porn, by artificially generating it. We use the latest in AI technology to create realistic and believable porn scenes, so you can enjoy yourself without feeling guilty. Whether you're looking for something to get you off, or just want to watch some hot scenes without any real-life consequences, this is the site for you.</p>
 <p>Reasons for why AI generated porn is better than traditional pornography include:</p>
 <ul>
@@ -10,4 +11,3 @@
            <li>AI generated porn can be created without involving any real people, meaning that there is no risk of performers being exploited or mistreated</li>
            <li>AI generated porn can be created to be more realistic and lifelike than traditional porn, making it a more enjoyable experience for viewers</li>
 </ul>
-<img style="text-align: center" src="/img.png">
